<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_add_user_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edFullName"
        style="@style/T16R"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"
        android:hint="@string/app_add_user_fullname"
        android:textColor="@color/blue500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edAge"
        style="@style/T16R"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"
        android:hint="@string/app_add_user_add"
        android:inputType="number"
        android:textColor="@color/blue500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edFullName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        style="@style/BtnBlue500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2"
        android:text="@string/app_add_user_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edAge" />

</androidx.constraintlayout.widget.ConstraintLayout>